fixed image and video stretching

--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -106,7 +106,8 @@ h2 {
     margin: 2rem auto;
     width: 80%;
     justify-content: center;
-    max-height: 50rem;
+    /*max-height: 50rem;*/
+    height: 35vw;
 }
 
 .gameplayCont {
@@ -129,7 +130,7 @@ h2 {
 .gameplayCont img {
     width: 100%;
     height: 100%;
-    object-fit: contain;
+    object-fit: fill;
 }
 
 .project article {
